After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751938 - JNI: jaw_table_set_column_header is missing
JNI: jaw_table_set_column_header is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-03 23:33 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-04 13:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: Create setColumnHeader in AtkTable (1.35 KB, patch)
2015-07-04 13:23 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI: Create jaw_table_set_column_header (2.22 KB, patch)
2015-07-04 13:37 UTC, Magdalen Berns (irc magpie)
committed Details | Review
HACKING: remove set_column_header (701 bytes, patch)
2015-07-04 13:41 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI: minor formatting in jawtable.c (1.07 KB, patch)
2015-07-04 13:44 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-03 23:33:32 UTC
There is no implementation of jaw_table_set_column_header.[1]

[1] https://git.gnome.org/browse/atk/tree/atk/atktable.h#n80
Comment 1 Magdalen Berns (irc magpie) 2015-07-04 13:23:11 UTC
Created attachment 306805 [details] [review]
Wrapper: Create setColumnHeader in AtkTable
Comment 2 Magdalen Berns (irc magpie) 2015-07-04 13:37:24 UTC
Created attachment 306806 [details] [review]
JNI: Create jaw_table_set_column_header
Comment 3 Magdalen Berns (irc magpie) 2015-07-04 13:41:21 UTC
Created attachment 306807 [details] [review]
HACKING: remove set_column_header

This implementor is now in place.
Comment 4 Magdalen Berns (irc magpie) 2015-07-04 13:44:17 UTC
Created attachment 306808 [details] [review]
JNI: minor formatting in jawtable.c

Fixed some minor formatting issues in jawtable.c.

Closing.