JNI: Create jaw_table_set_column_header

Bug https://bugzilla.gnome.org/show_bug.cgi?id=751938